update the tests to get more to compile